# hotbatch

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
bench/: methodology.md  results.md
crates/hotbatch-bench/: Cargo.toml
crates/hotbatch-bench/src/: lib.rs  main.rs
crates/hotbatch-core/: Cargo.toml
crates/hotbatch-core/src/: kv_cache.rs  lib.rs  model.rs  sampler.rs  scheduler.rs  sequence.rs
crates/hotbatch-server/: Cargo.toml
crates/hotbatch-server/src/: api.rs  lib.rs  main.rs  metrics.rs  naive.rs  sse.rs
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: architecture.md  papers.md
src/: main.rs
tests/: api.rs  cancellation.rs  correctness.rs  determinism.rs  finish_reasons.rs  naive_lifecycle.rs  streaming.rs  validation.rs
tests/common/: mod.rs
tests/fixtures/: gpt2-greedy.json
