[package]
name = "hotbatch"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "OpenAI-compatible Rust inference server with continuous batching."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
default-run = "hotbatch"

[workspace]
members = [
    "crates/hotbatch-core",
    "crates/hotbatch-server",
    "crates/hotbatch-bench",
]
resolver = "2"
default-members = ["."]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/connorg45/hotbatch"
homepage = "https://github.com/connorg45/hotbatch"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.7"
bytes = "1"
candle-core = "0.10.2"
candle-nn = "0.10.2"
clap = { version = "4", features = ["derive"] }
dejavu = "2.37"
futures-util = "0.3"
hf-hub = { version = "1.0.0-rc.1", features = ["blocking", "rustls-tls"] }
http = "1"
once_cell = "1"
plotters = { version = "0.3", default-features = false, features = ["ab_glyph", "bitmap_backend", "bitmap_encoder", "line_series"] }
prometheus = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies]
anyhow.workspace = true
clap.workspace = true
hotbatch-bench = { path = "crates/hotbatch-bench" }
hotbatch-core = { path = "crates/hotbatch-core" }
hotbatch-server = { path = "crates/hotbatch-server" }
tokio.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
anyhow.workspace = true
futures-util.workspace = true
hotbatch-core = { path = "crates/hotbatch-core" }
hotbatch-server = { path = "crates/hotbatch-server" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
