[package]
name = "hotbatch-core"
version.workspace = true
edition.workspace = true
description = "Continuous batching, model, sampling, and KV-cache primitives for Hotbatch."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
hf-hub.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokenizers.workspace = true
tracing.workspace = true
uuid.workspace = true
