[package]
name = "hotbatch-server"
version.workspace = true
edition.workspace = true
description = "OpenAI-compatible HTTP inference server powered by Hotbatch."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "hotbatch-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
hotbatch-core = { path = "../hotbatch-core" }
http.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokenizers.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio-test.workspace = true
